Started the remote node tests